BottomNav, Leftpanel Done, using dummy movie data

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,5 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Home Page"></app-explore-container>
+  <app-posts name="Home Page"></app-posts>
 </ion-content>
