--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
+  <ion-menu content-id="content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-menu-toggle>
+        <ion-list>
+          <ion-item>
+            <ion-icon name="star" slot="start"></ion-icon>
+            <ion-label
+              [routerLink]="['/movielist']"
+              routerLinkActive="router-link-active"
+              >Movie Theater</ion-label
+            >
+          </ion-item>
+        </ion-list>
+      </ion-menu-toggle>
+    </ion-content>
+  </ion-menu>
+
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
