--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<!-- <ion-app>
   <ion-menu content-id="content">
     <ion-header>
       <ion-toolbar>
@@ -23,4 +23,32 @@
   </ion-menu>
 
   <ion-router-outlet></ion-router-outlet>
+</ion-app> -->
+
+<!--  -->
+<!--  -->
+
+<ion-app>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="true">
+          <ion-item>
+            <ion-icon name="home-outline"></ion-icon>
+            <ion-label (click)="home()">Home</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="log-out"></ion-icon>
+            <ion-label (click)="logout()">Log Out</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
