--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,4 +15,9 @@
   </ion-header>
 
   <app-posts name="Home Page"></app-posts>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="addForm()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
