--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-card-content>
-    <h2>testing</h2>
+    <!-- <h2>testing</h2>
     <ion-img
       src="https://img.freepik.com/free-photo/delicious-vietnamese-food-including-pho-ga-noodles-spring-rolls-white-table_181624-34062.jpg?size=626&ext=jpg"
     ></ion-img>
@@ -8,6 +8,36 @@
       <ion-img [src]=""></ion-img>
     </ion-avatar>
     <span class="name">test</span>
-    <span class="handle">test</span>
+    <span class="handle">test</span> -->
+
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="3">
+          <ion-avatar>
+            <img src=" {{ posts.avatar }} " alt="" />
+          </ion-avatar>
+        </ion-col>
+        <ion-col size="9"><h2 style="margin-top: 1rem">a</h2></ion-col>
+        <ion-col size="12"></ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-img class="img-content" src=" {{ posts.content }} "></ion-img>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="10" offset="1"></ion-col>
+        <ion-col size="3">
+          <ion-button color="transparant">
+            <ion-icon name="heart-outline" size="large"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button color="transparant">
+            <ion-icon name="chatbubble-outline" size="large"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="3"> </ion-col>
+        <ion-col size="3"> </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card-content>
 </ion-card>
