--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="3">
+            <ion-avatar>
+              <img src="{{ profile.avatar }}" />
+            </ion-avatar>
+          </ion-col>
+          <ion-col size="9">
+            <ion-button color="primary">Primary</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-toolbar>
   </ion-header>
 
