--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -11,5 +11,21 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Profile Page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6" offset="3" class="ion-margin-top">
+        <img
+          width="180"
+          height="180"
+          style="border-radius: 1000px"
+          src="{{ profile.avatar }}"
+          alt=""
+          srcset=""
+        />
+      </ion-col>
+      <ion-col size="12">
+        <h2 style="text-align: center">{{ profile.name }}</h2>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
