--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -21,7 +21,7 @@
         {{ mv.caption }}
       </ion-col>
       <ion-col size="3">
-        <ion-button color="transparant" (click)="detailPost()">
+        <ion-button color="transparant" (click)="likePost(mv.id)">
           <ion-icon
             name="heart-outline"
             size="large"
@@ -43,7 +43,7 @@
       <ion-col size="3"
         ><ion-button
           color="transparant"
-          (click)="editForm()"
+          (click)="editPost(mv.id)"
           *ngIf="mv.owner == 1"
         >
           <ion-icon
