--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,11 +40,15 @@
         <ion-menu-toggle auto-hide="true">
           <ion-item>
             <ion-icon name="home-outline"></ion-icon>
-            <ion-label (click)="home()">Home</ion-label>
+            <ion-label class="ion-margin-start" (click)="home()"
+              >Home</ion-label
+            >
           </ion-item>
           <ion-item>
             <ion-icon name="log-out"></ion-icon>
-            <ion-label (click)="logout()">Log Out</ion-label>
+            <ion-label class="ion-margin-start" (click)="logout()"
+              >Log Out</ion-label
+            >
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
