--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Edit</ion-title>
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<!-- <ion-content>
   <ion-list>
     <ion-item>
       <ion-label position="floating">Caption</ion-label>
@@ -23,4 +23,55 @@
   <ion-button expand="block" color="danger" (click)="back()">
     Cancel
   </ion-button>
+</ion-content> -->
+
+<ion-content>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="8" offset="2">
+        <h1 style="border: 2px white solid; text-align: center; padding: 1rem">
+          Edit Status
+        </h1>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-list class="ion-margin-vertical">
+    <ion-item>
+      <ion-label position="floating">Caption</ion-label>
+      <ion-input type="text" [(ngModel)]="caption"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Content</ion-label>
+      <ion-input type="text" [(ngModel)]="content"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-grid fixed class="ion-margin-top">
+    <ion-row>
+      <ion-col size="12"
+        ><ion-button
+          shape="round"
+          fill="outline"
+          expand="block"
+          color="dark"
+          size="large"
+          (click)="editPost()"
+        >
+          Edit Status
+        </ion-button></ion-col
+      >
+      <ion-col size="12"
+        ><ion-button
+          shape="round"
+          expand="block"
+          color="dark"
+          size="large"
+          (click)="back()"
+        >
+          Batal
+        </ion-button></ion-col
+      >
+    </ion-row>
+  </ion-grid>
 </ion-content>
