--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,18 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> Profile </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar>Profile</ion-toolbar>
+</ion-header> -->
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Profile</ion-title>
+    <ion-toolbar
+      ><ion-icon
+        size="large"
+        class="ion-margin-start"
+        name="chevron-back-outline"
+        (click)="back()"
+      ></ion-icon>
     </ion-toolbar>
   </ion-header>
 
   <ion-grid fixed>
     <ion-row>
+      <ion-col size="6" offset="3" class="ion-margin-bottom">
+        <h1 style="border: 2px white solid; text-align: center; padding: 1rem">
+          Profile
+        </h1>
+      </ion-col>
       <ion-col size="6" offset="3" class="ion-margin-top">
         <img
           width="180"
@@ -25,6 +33,7 @@
       </ion-col>
       <ion-col size="12">
         <h2 style="text-align: center">{{ profile.name }}</h2>
+        <p style="text-align: center; color: gray">@{{ profile.username }}</p>
       </ion-col>
     </ion-row>
   </ion-grid>
