--- a/src/app/register-page/register-page.page.html
+++ b/src/app/register-page/register-page.page.html
@@ -25,14 +25,8 @@
             type="password"
             [(ngModel)]="password"
           ></ion-input> </ion-item
-        ><ion-item>
-          <ion-label position="floating">Confirm Password</ion-label>
-          <ion-input
-            type="password"
-            [(ngModel)]="confirm_password"
-          ></ion-input> </ion-item
       ></ion-col>
-      <ion-col size="12" class="ion-margin-top">
+      <ion-col size="12">
         <ion-button
           fill="outline"
           shape="round"
@@ -55,7 +49,7 @@
         </ion-button>
       </ion-col>
       <ion-col size="12">
-        <h3 style="margin-top: 2rem; text-align: center">Powered by Atiga</h3>
+        <h5 style="margin-top: 6.5rem; text-align: center">Powered by Atiga</h5>
       </ion-col>
     </ion-row>
   </ion-grid>
